# Templex

./: .clang-format  .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/common/cache/: TypeCache.h
common/include/common/model/: Instantiation.h  Template.h  TemplateParameter.h
common/include/common/util/: Comparators.h
common/src/cache/: TypeCache.cpp
common/src/model/: Instantiation.cpp  Template.cpp  TemplateParameter.cpp
doc/: goals.md
docker/: Dockerfile  build-script.sh  readme.md
frontend/: CMakeLists.txt
frontend/resources/: style.qss
frontend/resources/qss/: style.qss
frontend/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
frontend/src/helpers/: GlobalDefines.h  MenuRegistry.cpp  MenuRegistry.h
frontend/src/ui/: BasicDelegate.cpp  BasicDelegate.h  IPage.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PageBase.cpp  PageBase.h
frontend/src/ui/classes/instantiations/: ClassInstantiationsPage.cpp  ClassInstantiationsPage.h  ClassInstantiationsPage.ui  InstantiationSortingProxy.cpp  InstantiationSortingProxy.h  InstantiationsModel.cpp  InstantiationsModel.h
frontend/src/ui/classes/statistics/: ClassStatisticsPage.cpp  ClassStatisticsPage.h  ClassStatisticsPage.ui
frontend/src/ui/classes/stl_containers/: AggregationModel.cpp  AggregationModel.h  AggregationProxy.cpp  AggregationProxy.h  InstantiationLocationModel.cpp  InstantiationLocationModel.h  STLContainersPage.cpp  STLContainersPage.h  STLContainersPage.ui
frontend/src/ui/common/class_template_selector/: ClassNameFilterProxy.cpp  ClassNameFilterProxy.h  ClassTemplateSelector.cpp  ClassTemplateSelector.h  ClassTemplateSelector.ui  TemplateModel.cpp  TemplateModel.h
frontend/src/ui/functions/instantiations/: FunctionInstantiationsPage.cpp  FunctionInstantiationsPage.h  FunctionInstantiationsPage.ui  FunctionNamesModel.cpp  FunctionNamesModel.h  FunctionOverloadsModel.cpp  FunctionOverloadsModel.h
frontend/src/ui/functions/stl_algorithms/: STLAlgorithmsPage.cpp  STLAlgorithmsPage.h  STLAlgorithmsPage.ui
frontend/src/util/: JSONImport.cpp  JSONImport.h
parser/: CMakeLists.txt
parser/src/: main.cpp
parser/src/clang_implementation/: ASTConsumer.cpp  ASTConsumer.h  ASTFrontendAction.cpp  ASTFrontendAction.h  RecursiveASTVisitor.cpp  RecursiveASTVisitor.h
parser/src/data/: TypeDTO.h
parser/src/model/: ClassInstantiation.cpp  ClassInstantiation.h  ClassTemplate.cpp  ClassTemplate.h  TemplateArgument.cpp  TemplateArgument.h  TemplateParameter.cpp  TemplateParameter.h  Type.h
parser/src/util/: Comparators.h  DataController.h  Exceptions.cpp  Exceptions.h  JSONExport.cpp  JSONExport.h  TypeCache.cpp  TypeCache.h
